--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,23 +1,41 @@
 .navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: black;
   width: 100%;
   height: 80px;
-  background-color: black;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  padding: 10px 20px;
 }
 
 .links {
-  margin-right: 30px;
+  display: flex;
+  gap: 20px;
+}
+
+.title h1 {
+  margin: 0;
+  color: white;
+}
+
+.logout {
   display: flex;
   align-items: center;
 }
-.links a {
-  text-decoration: none;
+
+.logout-button {
+  background: none;
+  border: none;
+  cursor: pointer;
   color: white;
-  margin-left: 0px;
-  font-size: 25px;
+  font-size: 1.5rem;
+  margin-left: 10px;
 }
-.navbar {
-  color: white;
+
+.logout-button:hover {
+  color: #f0f0f0;
+}
+
+* {
+  box-sizing: border-box;
 }
